see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Feb-2010 Jean-Marie Simonet
^ Refactored editors-xtd plugins ini keys.

03-Feb-2010 Hannes Papenberg
# Fixed bug in JTable::reset() that don't properly reset the values - Thanks Jonnathan!
^ Changed JTable::__construct() to create the properties with their default values from the table - Thanks Jonnathan!
^ Changed queries of all plugins to use JQuery - Thanks Dejan Acman!
^ Changed queries of all modules to use JQuery - Thanks Omar!
^ Changed JHTML::script and JHTML::stylesheet to new scheme
^ Removed unnecessary comment in module
^ Removed com_poll layout from rhuk_milkyway overrides

02-Feb-2010 Hannes Papenberg
# - fixed category parameter in mod_latest - Thanks Jonnathan!
^ - Changed mod_popular to use the contentModelArticles - Thanks Jonnathan!
# - Fixed the link to edit an article in mod_popular - Thanks Jonnathan!
+ - Added parameters to mod_popular - Thanks Jonnathan!
$ - Fixed languages strings for mod_popular - Thanks Jonnathan!

02-Feb-2010 Jean-Marie Simonet 
^ Customized enabled/published ini keys/values for modules and plugins
^ Refactored ini keys in authentication plugins

01-Feb-2010 Mark Dexter
# Fix menu settings in sample data (Elin Waring)

01-Feb-2010 Christophe Demko
^ Save the featured state in the article edit view
# Corrected a bug in installation joomla.sql file
# Corrected parse_ini_file for php version >= 5.3.0 (does not deal correctly with _QQ_ defined constant)

01-Feb-2010 Hannes Papenberg
# Fixed com_search router and model
# Fixed com_search view
# Fixed routing in content search plugins

01-Feb-2010 Jean-Marie Simonet 